Feat: slack users api

--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ default-extensions:
 - PolyKinds
 - RankNTypes
 - StandaloneDeriving
+- TypeApplications
 - TypeFamilies
 - TypeOperators
 - TypeSynonymInstances
