--- a/slackell.cabal
+++ b/slackell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3a0e6fa3f984dca0f758db71f8fdd7c69b5f67933031faba4c543f1196c0be6c
+-- hash: 5e8b1313d9aadaeb3a2d047d4c57afaa4620a86e92a707543d397ae4a4eee12c
 
 name:           slackell
 version:        0.1.0
@@ -29,11 +29,12 @@ library
       Web.Slack.WebAPI
       Web.Slack.WebAPI.Conversations
       Web.Slack.WebAPI.Internal
+      Web.Slack.WebAPI.Users
   other-modules:
       Paths_slackell
   hs-source-dirs:
       src
-  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving LambdaCase OverloadedLabels OverloadedStrings PolyKinds RankNTypes StandaloneDeriving TypeFamilies TypeOperators TypeSynonymInstances
+  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving LambdaCase OverloadedLabels OverloadedStrings PolyKinds RankNTypes StandaloneDeriving TypeApplications TypeFamilies TypeOperators TypeSynonymInstances
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
       aeson
@@ -52,6 +53,7 @@ test-suite spec
   main-is: Spec.hs
   other-modules:
       Spec.Web.Slack.WebAPI.Conversations
+      Spec.Web.Slack.WebAPI.Users
       Web.Slack.Test.Client
       Web.Slack.Test.Helper
       Web.Slack.Test.MockServer
@@ -59,7 +61,7 @@ test-suite spec
       Paths_slackell
   hs-source-dirs:
       test
-  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving LambdaCase OverloadedLabels OverloadedStrings PolyKinds RankNTypes StandaloneDeriving TypeFamilies TypeOperators TypeSynonymInstances
+  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances GeneralizedNewtypeDeriving LambdaCase OverloadedLabels OverloadedStrings PolyKinds RankNTypes StandaloneDeriving TypeApplications TypeFamilies TypeOperators TypeSynonymInstances
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   build-depends:
       aeson
