Refactor: update lts to 15.8

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,7 @@
-resolver: lts-14.22
+resolver: lts-15.8
 packages:
 - .
 - lib/simple-api
 extra-deps:
+- extensible-0.8
 - membership-0
-- req-3.0.0
-- github: fumieval/extensible
-  commit: d197daaef0ae18b9734384b8f0efa5783bc629e9
