Feat: slach command

--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -39,6 +39,7 @@ language_extensions:
 - PolyKinds
 - RankNTypes
 - StandaloneDeriving
+- TupleSections
 - TypeApplications
 - TypeFamilies
 - TypeOperators
